Bug 896320: increase the visibility of review suggestions (report, webservice)

--- a/extensions/BMO/web/styles/reports.css
+++ b/extensions/BMO/web/styles/reports.css
@@ -32,7 +32,11 @@
 }
 
 #report-header {
-  background: #cccccc;
+    background-color: #cccccc;
+}
+
+.report_subheader {
+    background-color: #dddddd;
 }
 
 .report_row_odd {
